@@ -1,5 +1,5 @@
-DIST 8dc41685b547f0982755b90115d9a43a2d2b358c.tar.gz 1097797 SHA256 8ed0fa9b35dd046e9bb8fb247367f5c0d5656536ae24c7b5114b9de05efc61bf SHA512 f1ec3fe1fdb130eef9c43961f5ec4d296467bce6cbffa18ca0017f47da723f27cf660af5970741362013bcffa72f1b50783f3c599bce45f32285172dd400f627 WHIRLPOOL 77fd6ae2f9d2e7ddcad12491efa6219076f82dbd43e38dfce549a56d80db553b5450dff7ca5aa8f6667d68e4632ab3bbf6124bbecc4c7d1852eac5b4394f54a6
-DIST d07815f31093f28b47731f87f3f5ba5543f12d11.tar.gz 13455573 SHA256 4ad41f25f706faeda29f76f52210fe80eaa13f2970b1445c746e01b118da0374 SHA512 f5a5ef9022317c934464365cee1c9075ff8158cbc75a4cacbd7c8c25cc76b2f6ae6069d4745aa53d45ba82a399398506ff8a6aa2eb62784f9d658e21e2ab9a74 WHIRLPOOL 8e3214077873dddda04ba32a49f213662d3de46274f17a118202a11588bd817f9804b77ef247104fc7e3347defa4a6c92f7a827c2865b220b99974f64b59ac07
+DIST Metal-Demos-d07815f31093f28b47731f87f3f5ba5543f12d11.tar.gz 13455573 SHA256 4ad41f25f706faeda29f76f52210fe80eaa13f2970b1445c746e01b118da0374 SHA512 f5a5ef9022317c934464365cee1c9075ff8158cbc75a4cacbd7c8c25cc76b2f6ae6069d4745aa53d45ba82a399398506ff8a6aa2eb62784f9d658e21e2ab9a74 WHIRLPOOL 8e3214077873dddda04ba32a49f213662d3de46274f17a118202a11588bd817f9804b77ef247104fc7e3347defa4a6c92f7a827c2865b220b99974f64b59ac07
+DIST Python-for-Lazarus-.tar.gz 1097797 SHA256 8ed0fa9b35dd046e9bb8fb247367f5c0d5656536ae24c7b5114b9de05efc61bf SHA512 f1ec3fe1fdb130eef9c43961f5ec4d296467bce6cbffa18ca0017f47da723f27cf660af5970741362013bcffa72f1b50783f3c599bce45f32285172dd400f627 WHIRLPOOL 77fd6ae2f9d2e7ddcad12491efa6219076f82dbd43e38dfce549a56d80db553b5450dff7ca5aa8f6667d68e4632ab3bbf6124bbecc4c7d1852eac5b4394f54a6
 DIST f487b6a74a8837faa01d1f33bdcdba2e829a16c3.tar.gz 13455469 SHA256 fbfa03ad632ce9c1549301a1015717bd1bc5356f347c4ea1dfec03d52078ec2c SHA512 14131cba26511883b345d34162bfe6d7c25d2b0573d59e10f5271ca56b074ada6e212f23aa6234d646222a85fbbf831bc8095a528bf1a656f19ce0e6b82c5288 WHIRLPOOL ad5151fd795f417090b8514386212cf6c379a874e6d584f15cb4b66449923b332d71262ef1d63b5d524aa2d1b840dd662ec6fc549ddc1c864c24e59369d6aa72
 DIST mricrogl-1.2.20190902.tar.gz 8406981 SHA256 6283660f790801e14587b83ce6501095cedcf3c117e55ca5646cf1c9dfa0e5ee SHA512 801d21fd29016611526356de6524196dab40e14ae9fe1a47d8a74f6b75daacd336ddec3bcdba0e6848669dbac676b171f005821c7a6802504fcc5dcaa03f1232 WHIRLPOOL 152fe69a2d202bc725162b304c9d0cd67313819f3de2fa45cf61ef8bb3a848e566b6795de38ed940e3b89bb06ceb35d27d6505d9270c74765da5a860fc794b9f
 DIST mricrogl-1.2.20200324.tar.gz 38549569 SHA256 ef60874f6fabf15cec3d606c1f6b1f3e5cac53adc947d67b8cbff672f5ac0e76 SHA512 51abd0bd3394552857583a50eeb51a366653c89dd82db59b48c63fcce8d9551210105baaef12627ef885c09cc20bec7cd63cfed48693358e9b3951e449107968 WHIRLPOOL ae83d5e577233b9f2135eba1c78a28886e1a4688c40cbc0e1facbd7ad774e1f4d2293766871c13f849985bb99365144756877c73cd31f848b8ad6840432922ef
